@@ -6,6 +6,8 @@ urlpatterns = patterns('workflow',
     url(r'^workflowinstance/list/$',                                                                    'views.workflowinstance_list',              name='workflow-workflowinstance-list'),
     url(r'^workflowinstance/show/(?P<workflowinstance_id>\d+)/$',                                       'views.workflowinstance_show',              name='workflow-workflowinstance-show'),
     url(r'^workflowinstance/delete/(?P<workflowinstance_id>\d+)/$',                                     'views.workflowinstance_delete',            name='workflow-workflowinstance-delete'),
+    url(r'^workflowinstance/category/take/(?P<workflowinstance_id>\d+)/(?P<category_id>\d+)/$',         'views.workflowinstance_take_category',     name='workflow-workflowinstance-take_category'),
+    url(r'^workflowinstance/category/untake/(?P<workflowinstance_id>\d+)/(?P<category_id>\d+)/$',       'views.workflowinstance_untake_category',     name='workflow-workflowinstance-untake_category'),
     url(r'^workflowinstance/item/take/(?P<workflowinstanceitem_id>\d+)/$',                              'views.workflowinstanceitem_take',          name='workflow-workflowinstanceitem-take'),
     url(r'^workflowinstance/item/untake/(?P<workflowinstanceitem_id>\d+)/$',                            'views.workflowinstanceitem_untake',        name='workflow-workflowinstanceitem-untake'),
     url(r'^workflowinstance/item/validate/(?P<workflowinstanceitem_id>\d+)/(?P<validation_id>\d+)/$',   'views.workflowinstanceitem_validate',      name='workflow-workflowinstanceitem-validate'),
