@@ -1,3 +1,5 @@
 Version 0.1.0~dev
 
 	* Initial commit.
+	* Added possibility to take all items of a certain category in an
+	workflow instance items.
